2006-05-02  Andrew MacLeod  <amacleod@redhat.com>

PR tree-optimization/27381
	* tree-phinodes.c (remove_phi_arg_num): When moving a phi argument, 
	maintain the same immediate_use links.
	* tree-ssa-operands.c (dump_immediate_uses_for): Show iteration marker 
	node rather than segfaulting.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@113499 138bc75d-0d04-0410-961f-82ee72b054a4